[tool.poetry]
name = "py2exe-gui"
version = "0.1.8"
description = "GUI for PyInstaller, based on PySide6"
keywords = ["PyInstaller", "GUI", "PySide6"]
authors = ["muzing <muzi2001@foxmail.com>"]
license = "GPL-3.0-or-later"
readme = ["README.md", "README_zh.md"]
repository = "https://github.com/muziing/Py2exe-GUI"
exclude = ["src/py2exe_gui/Resources/Icons", "src/py2exe_gui/Resources/Texts"]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
PySide6 = "^6.4.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/muziing/Py2exe-GUI/issues"

[tool.poetry.group.dev.dependencies]
# Sphinx = "^5.3.0"
black = "^22.12.0"
isort = "^5.11.0"
mypy = "^0.991"
pyinstaller = "^5.7.0"

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "compiled_resources.py"

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
