[tool.poetry]
name = "py2exe-gui"
version = "0.1.10"
description = "GUI for PyInstaller, based on PySide6"
keywords = ["PyInstaller", "GUI", "PySide6"]
authors = ["muzing <muzi2001@foxmail.com>"]
license = "GPL-3.0-or-later"
readme = ["README.md", "README_zh.md"]
repository = "https://github.com/muziing/Py2exe-GUI"
exclude = ["src/py2exe_gui/Resources/Icons", "src/py2exe_gui/Resources/Texts"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/muziing/Py2exe-GUI/issues"

#[[tool.poetry.source]]
#name = "tsinghua_mirror"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
#priority = "default"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PySide6 = "^6.6.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
# Sphinx = "^5.3.0"
pre-commit = "^3.5.0"
black = "^22.12.0"
isort = "^5.12.0"
ruff = "^0.1.5"
mypy = "^1.7.0"
pyinstaller = "^5.13.0"

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "compiled_resources.py"

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
]
ignore = ["F401", "F403"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
